manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-log-output-app
  template:
    metadata:
      labels:
        app: web-log-output-app
    spec:
      volumes:
        - name: shared-folder
          persistentVolumeClaim:
            claimName: cluster-share
      containers:
        - name: web-log-output-app
          image: isalxmkh/web-log-output-app:v2.06
          volumeMounts:
            - name: shared-folder
              mountPath: /usr/src/app/files/
