manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-log-output-app-svc
  namespace: practice-dwk
spec:
  type: ClusterIP
  selector:
    app: web-log-output-app
  ports:
    - name: http
      port: 2345
      protocol: TCP
      targetPort: 5001
