manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-log-output-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /lo-get-data-from-file
        pathType: Prefix
        backend:
          service:
            name: web-log-output-app-svc
            port:
              number: 2345
  - http:
      paths:
      - path: /lo-get-data-from-rest
        pathType: Prefix
        backend:
          service:
            name: web-log-output-app-svc
            port:
              number: 2345
